--- a/FNN_MNIST_20160704/FNN_MNIST_20160704/FNN_MNIST_20160704.csproj
+++ b/FNN_MNIST_20160704/FNN_MNIST_20160704/FNN_MNIST_20160704.csproj
@@ -75,7 +75,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MNISTImage.cs" />
+    <Compile Include="MNIST.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
